--- a/css/style.css
+++ b/css/style.css
@@ -82,6 +82,9 @@ li:hover {
   #menuIcon {
     width: 0;
   }
+  #hide {
+    display: none;
+  }
 }
 @media screen and (max-width: 599px) {
   #menuIcon {
@@ -97,9 +100,17 @@ li:hover {
     margin-bottom: 0;
     text-align: center;
   }
+  #hide {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+  }
 }
 img.burger {
   display: block;
   margin-left: auto;
   margin-right: auto;
+}
+a[href*="undefined"] {
+  display: none;
 }
